--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML Academy: Седона</title>
+    </head>
+    <body>
+        <header class="main-header">
+            <nav class="main-navigation">
+                <a class="main-header-logo">
+                    <img src="img/index-logo.svg" width="368" height="153" alt="Логотип проекта Седона">
+                </a>
+                <ul class="site-navigation">
+                    <li><a href="info.html">Информация </a></li>
+                    <li><a href="media.html">Фото и видео </a></li>
+                    <li><a href="map.html">Карта штата </a></li>
+                    <li><a href="hotels.html">Гостиницы </a></li>                    
+                </ul>               
+            </nav>   
+        </header>
+        <main>
+            <section class="main-picture">                
+                <figure class="main-picture-content">
+                    <a href="#"><img src="img/sedona.jpg" width="768" height="350" alt="Изображение Седона Главное"></a>
+                </figure>
+                <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+            </section>
+            <section class="reasons">
+                <p>Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон</p>
+                <ul class="reasons-1-list">
+                    <li class="reasons-1-item">
+                        <h3>Настоящий городок</h3>
+                        <p>-№1-</p>
+                        <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
+                    </li>                    
+                </ul>
+                    <figure class="picture-content-1">
+                    <a href="#"><img src="img/sedona-flags.jpg" width="300" height="150" alt="Изображение Седона флаги"></a>
+                    </figure>
+            </section>
+            <section class="advices">                
+                <ul class="advices-list">
+                    <li class="advices-item">
+                        <h3>Жилье</h3>
+                        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                    </li>
+                    <li class="advices-item">
+                        <h3>Еда</h3>
+                        <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь</p>
+                    </li>
+                    <li class="advices-item">
+                        <h3>Сувениры</h3>
+                        <p>Не только китайского, но и местного производства</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="reasons-2">
+                <ul class="reasons-1-list">
+                    <li class="reasons-1-item">
+                        <h3>Там есть мост дьявола</h3>
+                        <p>-№2-</p>
+                        <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+                    </li>                
+                </ul>
+                <figure class="picture-content-2">
+                    <a href="#"><img src="img/sedona-canyon.jpg" width="300" height="150" alt="Изображение Седона каньон"></a>
+                </figure>
+                <ul class="reasons-2-list">
+                    <li class="reasons-2-item">
+                        <h3>Небольшая площадь</h3>
+                        <p>-№3-</p>
+                        <p>Все достопримечательности находятся очень близко</p>
+                    </li>
+                    <li class="reasons-2-item">
+                        <h3>Красивая дорога</h3>
+                        <p>-№4-</p>
+                        <p>Ехать в Седону из Лас Вегаса совсем не скучно!</p>
+                    </li>
+                    <li class="reasons-2-item">
+                        <h3>Мало туристов</h3>
+                        <p>-№5-</p>
+                        <p>Большинство едет в Гранд Каньон и толпится там</p>
+                    </li>
+                </ul>                
+            </section>
+            <section class="summary">
+                <h1>Заинтересовались?</h1>
+                <p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+                <h2>Поиск гостиницы в Седоне</h2>
+                <form class="summary-form" action="https://echo.htmlacademy.ru" method="post">
+                    <p>Дата заезда
+                    <input type="text" name="date" value="" placeholder="24.04.2017"></p>
+                    <p>Дата выезда
+                    <input type="text" name="date" value="" placeholder="04.07.2017"></p>
+                    <p>Взрослые
+                    <input type="text" name="date" value="" placeholder="2"></p>
+                    <p>Дети
+                    <input type="text" name="date" value="" placeholder="0"></p>
+                    <button class="button" type="submit">Найти</button>
+                </form>                                
+            </section>
+            <section class="modal modal-map">            
+            </section>
+        </main>
+        <footer class="main-footer">
+            <p class="footer-hashteg">
+                <a href="#">#VISITSEDONA</a>
+            </p>            
+            <div class="footer-social">
+                <ul>        
+                    <li><a class="social-button" href="#">Twitter</a></li>
+                    <li><a class="social-button" href="#">Facebook</a></li>
+                    <li><a class="social-button" href="#">Youtube</a></li>
+                </ul>
+            </div>            
+            <img src="img/index-logo.svg" width="368" height="153" alt="Вебсайт HTML Academy">
+        </footer>
+    </body>
 </html>
