разметка index и catalog Sedona

--- a/index.html
+++ b/index.html
@@ -20,23 +20,15 @@
         </header>
         <main>
             <section class="main-picture">                
-                <figure class="main-picture-content">
-                    <a href="#"><img src="img/sedona.jpg" width="768" height="350" alt="Изображение Седона Главное"></a>
-                </figure>
-                <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-            </section>
-            <section class="reasons">
+                <img src="img/sedona.jpg" width="768" height="350" alt="Изображение Седона Главное">
+                <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
                 <p>Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон</p>
-                <ul class="reasons-1-list">
-                    <li class="reasons-1-item">
-                        <h3>Настоящий городок</h3>
-                        <p>-№1-</p>
-                        <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
-                    </li>                    
-                </ul>
-                    <figure class="picture-content-1">
-                    <a href="#"><img src="img/sedona-flags.jpg" width="300" height="150" alt="Изображение Седона флаги"></a>
-                    </figure>
+            </section>
+            <section class="reasons">                
+                <h3>Настоящий городок</h3>
+                <p>№1</p>
+                <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>                
+                <img src="img/sedona-flags.jpg" width="300" height="150" alt="Изображение Седона флаги"></a>                
             </section>
             <section class="advices">                
                 <ul class="advices-list">
@@ -54,37 +46,31 @@
                     </li>
                 </ul>
             </section>
-            <section class="reasons-2">
-                <ul class="reasons-1-list">
-                    <li class="reasons-1-item">
-                        <h3>Там есть мост дьявола</h3>
-                        <p>-№2-</p>
-                        <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
-                    </li>                
-                </ul>
-                <figure class="picture-content-2">
-                    <a href="#"><img src="img/sedona-canyon.jpg" width="300" height="150" alt="Изображение Седона каньон"></a>
-                </figure>
+            <section class="reasons-2">                
+                <h3>Там есть мост дьявола</h3>
+                <p>№2</p>
+                <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+                <img src="img/sedona-canyon.jpg" width="300" height="150" alt="Изображение Седона каньон">                
                 <ul class="reasons-2-list">
                     <li class="reasons-2-item">
                         <h3>Небольшая площадь</h3>
-                        <p>-№3-</p>
+                        <p>№3</p>
                         <p>Все достопримечательности находятся очень близко</p>
                     </li>
                     <li class="reasons-2-item">
                         <h3>Красивая дорога</h3>
-                        <p>-№4-</p>
+                        <p>№4</p>
                         <p>Ехать в Седону из Лас Вегаса совсем не скучно!</p>
                     </li>
                     <li class="reasons-2-item">
                         <h3>Мало туристов</h3>
-                        <p>-№5-</p>
+                        <p>№5</p>
                         <p>Большинство едет в Гранд Каньон и толпится там</p>
                     </li>
                 </ul>                
             </section>
             <section class="summary">
-                <h1>Заинтересовались?</h1>
+                <h2>Заинтересовались?</h2>
                 <p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
                 <h2>Поиск гостиницы в Седоне</h2>
                 <form class="summary-form" action="https://echo.htmlacademy.ru" method="post">
@@ -99,7 +85,7 @@
                     <button class="button" type="submit">Найти</button>
                 </form>                                
             </section>
-            <section class="modal modal-map">            
+            <section class="map">            
             </section>
         </main>
         <footer class="main-footer">
@@ -112,8 +98,9 @@
                     <li><a class="social-button" href="#">Facebook</a></li>
                     <li><a class="social-button" href="#">Youtube</a></li>
                 </ul>
-            </div>            
-            <img src="img/index-logo.svg" width="368" height="153" alt="Вебсайт HTML Academy">
+            </div> 
+            <p>WEBSITE by</p>          
+            <a class="link-htmlcss" href="/htmlacademy.ru/intensive/htmlcss">#</a>
         </footer>
     </body>
 </html>
