--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li><a href="info.html">Информация </a></li>
                     <li><a href="media.html">Фото и видео </a></li>
                     <li><a href="map.html">Карта штата </a></li>
-                    <li><a href="hotels.html">Гостиницы </a></li>                    
+                    <li><a href="catalog.html">Гостиницы </a></li>                    
                 </ul>               
             </nav>   
         </header>
@@ -28,7 +28,7 @@
                 <h3>Настоящий городок</h3>
                 <p>№1</p>
                 <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>                
-                <img src="img/sedona-flags.jpg" width="300" height="150" alt="Изображение Седона флаги"></a>                
+                <img src="img/sedona-flags.jpg" width="300" height="150" alt="Изображение Седона флаги">
             </section>
             <section class="advices">                
                 <ul class="advices-list">
@@ -50,24 +50,27 @@
                 <h3>Там есть мост дьявола</h3>
                 <p>№2</p>
                 <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
-                <img src="img/sedona-canyon.jpg" width="300" height="150" alt="Изображение Седона каньон">                
-                <ul class="reasons-2-list">
-                    <li class="reasons-2-item">
+                <img src="img/sedona-canyon.jpg" width="300" height="150" alt="Изображение Седона каньон">
+            </section>
+            <section class="reasons-3">                
+                <ul class="reasons-3-list">
+                    <li class="reasons-3-item">
                         <h3>Небольшая площадь</h3>
                         <p>№3</p>
                         <p>Все достопримечательности находятся очень близко</p>
                     </li>
-                    <li class="reasons-2-item">
+                    <li class="reasons-3-item">
                         <h3>Красивая дорога</h3>
                         <p>№4</p>
                         <p>Ехать в Седону из Лас Вегаса совсем не скучно!</p>
                     </li>
-                    <li class="reasons-2-item">
+                    <li class="reasons-3-item">
                         <h3>Мало туристов</h3>
                         <p>№5</p>
                         <p>Большинство едет в Гранд Каньон и толпится там</p>
                     </li>
-                </ul>                
+                </ul>
+            </section>                
             </section>
             <section class="summary">
                 <h2>Заинтересовались?</h2>
