--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,10 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="stars-1"></span>
+                            <span class="star-1"></span>
+                            <span class="star-1"></span>
+                            <span class="star-1"></span>
+                            <span class="star-1"></span>
                         </div>
                         <p>Рейтинг: 8,5</p>
                     </li>
@@ -73,7 +76,9 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="stars-2"></span>
+                            <span class="star-2"></span>
+                            <span class="star-2"></span>
+                            <span class="star-2"></span>
                         </div>
                         <p>Рейтинг: 8,9</p>
                     </li>
@@ -84,7 +89,8 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="stars-3"></span>
+                            <span class="star-3"></span>
+                            <span class="star-3"></span>
                         </div>
                         <p>Рейтинг: 9,2</p>
                     </li>
