класс stars исправлен

--- a/catalog.html
+++ b/catalog.html
@@ -62,10 +62,10 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="star-1"></span>
-                            <span class="star-1"></span>
-                            <span class="star-1"></span>
-                            <span class="star-1"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
                         </div>
                         <p>Рейтинг: 8,5</p>
                     </li>
@@ -76,9 +76,9 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="star-2"></span>
-                            <span class="star-2"></span>
-                            <span class="star-2"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
                         </div>
                         <p>Рейтинг: 8,9</p>
                     </li>
@@ -89,8 +89,8 @@
                         <a class="button-3" href="#">Подробнее</a>
                         <a class="button-4" href="#">Забронировать</a>
                         <div>
-                            <span class="star-3"></span>
-                            <span class="star-3"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
                         </div>
                         <p>Рейтинг: 9,2</p>
                     </li>
