--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Седона</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo" href="index.html">
-                    <img src="img/index-logo.svg" width="368" height="153" alt="Логотип проекта Седона">
+                    <img src="img/logo-min.png" width="138" height="69" alt="Логотип проекта Седона">
                 </a>
                 <ul class="site-navigation">
                     <li><a href="info.html">Информация </a></li>
@@ -56,7 +57,7 @@
                 </ul>
                 <ul class="hotels-list">
                     <li class="hotels-item">
-                        <img src="#" width="100" height="50" alt="Amara-resort-&-spa">
+                        <img src="img/ars-min.jpg" width="135" height="90" alt="Amara-resort-&-spa">
                         <h2><a href="catalog-item.html">Amara resort & spa</a></h2>
                         <span class="catalog-item-title"> «Гостиница от 4000 р.»</span><br>
                         <a class="button-3" href="#">Подробнее</a>
@@ -70,7 +71,7 @@
                         <p>Рейтинг: 8,5</p>
                     </li>
                     <li class="hotels-item">
-                        <img src="#" width="100" height="50" alt="Desert-Quail-Inn">
+                        <img src="img/dqi-min.jpg" width="135" height="90" alt="Desert-Quail-Inn">
                         <h2><a href="catalog-item.html">Desert Quail Inn</a></h2>
                         <span class="catalog-item-title"> «Мотель от 3000 р.»</span><br>
                         <a class="button-3" href="#">Подробнее</a>
@@ -83,7 +84,7 @@
                         <p>Рейтинг: 8,9</p>
                     </li>
                     <li class="hotels-item">
-                        <img src="#" width="100" height="50" alt="Villas-at-Poco-Diablo">
+                        <img src="img/apd-min.jpg" width="135" height="90" alt="Villas-at-Poco-Diablo">
                         <h2><a href="catalog-item.html">Villas at Poco Diablo</a></h2>
                         <span class="catalog-item-title"> «Апартаменты от 2000 р.»</span><br>
                         <a class="button-3" href="#">Подробнее</a>
