--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Седона</title>
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+        <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -20,88 +22,105 @@
             </nav>   
         </header>
         <main>
-            <section class="main-picture">                
+            <section class="main-picture">
                 <img src="img/sedona-logo.jpg" width="1199" height="509" alt="Изображение Седона Главное">
-                <h1 class="sedona-main">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+                <h1 class="sedona-main">Седона - небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
                 <p>Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон</p>
             </section>
-            <section class="reasons">                
-                <h2 class="white-font">Настоящий городок</h2>
-                <p>№1</p>
-                <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>                
-                <img src="img/hotel-photo.jpg" width="800" height="256" alt="Изображение Отель">
-            </section>
+            <section class="reason-1-section">
+                <figure class="reasons">                
+                    <h2>Настоящий<br>городок</h2>
+                    <p>№1</p>
+                    <p>Седона-не аттракцион для туристов,<br>там течет своя жизнь</p>
+                </figure>
+                <figure class="hotel">
+                    <img src="img/hotel-photo.jpg" width="800" height="256" alt="Изображение Отель">
+                </figure>
+            </section>                      
             <section class="advices">                
                 <ul class="advices-list">
                     <li class="advices-item">
                         <h2 class="black-font">Жилье</h2>
-                        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                        <p>Рекомендуем пожить в настоящем<br>мотеле, все как в кино!</p>
                     </li>
                     <li class="advices-item">
                         <h2 class="black-font">Еда</h2>
-                        <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь</p>
+                        <p>Всегда заказывайте фирменный бургер,<br>Вы не разочаруетесь</p>
                     </li>
                     <li class="advices-item">
                         <h2 class="black-font">Сувениры</h2>
-                        <p>Не только китайского, но и местного производства</p>
+                        <p>Не только китайского, но и местного<br>производства</p>
                     </li>
                 </ul>
             </section>
-            <section class="reasons-2">                
-                <h2 class="white-font">Там есть мост дьявола</h2>
-                <p>№2</p>
-                <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
-                <img src="img/devil-photo.jpg" width="800" height="256" alt="Изображение Седона Мост дьявола">
-            </section>
+            <section>
+                <figure class="bridge">
+                    <img src="img/devil-photo.jpg" width="800" height="256" alt="Изображение Седона Мост дьявола">
+                </figure>
+                <figure class="reasons-2">               
+                    <h2>Там есть мост дьявола</h2>
+                    <p>№2</p>
+                    <p>Да, по нему можно пройти! Если конечно<br>Вы осмелитесь</p>
+                </figure>                 
+            </section>            
             <section class="reasons-3">                
                 <ul class="reasons-3-list">
                     <li class="reasons-3-item">
                         <h2 class="black-font">Небольшая площадь</h2>
                         <p>№3</p>
-                        <p>Все достопримечательности находятся очень близко</p>
+                        <p>Все достопримечательности<br> находятся очень близко</p>
                     </li>
                     <li class="reasons-3-item">
                         <h2 class="black-font">Красивая дорога</h2>
                         <p>№4</p>
-                        <p>Ехать в Седону из Лас Вегаса совсем не скучно!</p>
+                        <p>Ехать в Седону из Лас Вегаса совсем<br> не скучно!</p>
                     </li>
                     <li class="reasons-3-item">
                         <h2 class="black-font">Мало туристов</h2>
                         <p>№5</p>
-                        <p>Большинство едет в Гранд Каньон и толпится там</p>
+                        <p>Большинство едет в Гранд Каньон и<br> толпится там</p>
                     </li>
                 </ul>
             </section>
             <section class="summary">
                 <h3>Заинтересовались?</h3>
-                <p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+                <p>Укажите предполагаемые даты поездки,<br>и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
                 <h2>Поиск гостиницы в Седоне</h2>
                 <form class="summary-form" action="https://echo.htmlacademy.ru" method="post">
-                    <p>Дата заезда
-                    <input type="text" name="date" value="" placeholder="24.04.2017"></p>
-                    <p>Дата выезда
-                    <input type="text" name="date" value="" placeholder="04.07.2017"></p>
-                    <p>Взрослые
-                    <input type="text" name="date" value="" placeholder="2"></p>
-                    <p>Дети
-                    <input type="text" name="date" value="" placeholder="0"></p>
+                    <p class="form-item">
+                        <label for="enter-date">Дата заезда</label>
+                        <input id="enter-date" type="text" name="date" value="" placeholder="24.04.2017">
+                    </p>
+                    <p class="form-item">
+                        <label for="exit-date">Дата выезда</label>
+                        <input id="exit-date" type="text" name="date" value="" placeholder="04.07.2017">
+                    </p>
+                    <p class="form-item">
+                        <label for="adult">Взрослые</label>
+                        <input id="adult" type="text" name="date" value="" placeholder="2">
+                    </p>
+                    <p class="form-item">
+                        <label for="kids">Дети</label>
+                        <input id="kids" type="text" name="date" value="" placeholder="0">
+                    </p>
                     <button class="button" type="submit">Найти</button>
                 </form>                                
             </section>
-            <section class="map">            
+            <section class="map">
+                <img src="img/map-min.png" height="593" width="1200">            
             </section>
         </main>
         <footer class="main-footer">
             <p class="footer-hashteg">
                 <a href="#">#VISITSEDONA</a>
             </p>            
-            <div class="footer-social">
+            <section class="footer-social">
                 <ul>        
                     <li><a class="social-button" href="#">Twitter</a></li>
                     <li><a class="social-button" href="#">Facebook</a></li>
                     <li><a class="social-button" href="#">Youtube</a></li>
                 </ul>
-            </div> 
+            </section> 
             <p>WEBSITE by</p>          
             <a class="link-htmlcss" href="/htmlacademy.ru/intensive/htmlcss">#</a>
         </footer>
